--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Miniver&family=Roboto+Slab&display=swap");
-
 * {
     padding: 0%;
     margin: 0%;
@@ -8,11 +7,11 @@
     font-family: 'Roboto Slab', serif; 
 }
 .navbar{
-    background-color: rgb(100, 199, 232);
+    background-color: rgb(77, 178, 212);
+    display: flex;
 }
 .navbar-brand{
     font-size: 1.5rem;
-    color: rgb(48, 106, 229);
 }
 .navbar a{
     font-size: 1.5rem;
